--- a/src/html/blocks/benefits.html
+++ b/src/html/blocks/benefits.html
@@ -10,9 +10,9 @@
                 </div>
                 <div class="benefits__icon-text">
                     <div class="benefits__item-title">
-                        <h3 data-key="card1-title" class="title-4">Облачное размещение</h3>
+                        <h3 class="title-4">Облачное размещение</h3>
                     </div>
-                    <p data-key="card1-text" class="benefits__item-desc">Зашита не нагружает систему и всегда соответствует актуальной версии</p>
+                    <p class="benefits__item-desc">Зашита не нагружает систему и всегда соответствует актуальной версии</p>
                 </div>
             </li>
             <li class="benefits__item">
@@ -23,9 +23,9 @@
                 </div>
                 <div class="benefits__icon-text">
                     <div class="benefits__item-title">
-                        <h3 data-key="card2-title" class="title-4">Высокая степень выявления угроз </h3>
+                        <h3 class="title-4">Высокая степень выявления угроз </h3>
                     </div>
-                    <p data-key="card2-text" class="benefits__item-desc">Применяется искусственный интеллект и машинное обучение</p>
+                    <p class="benefits__item-desc">Применяется искусственный интеллект и машинное обучение</p>
                 </div>
             </li>
             <li class="benefits__item">
@@ -36,9 +36,9 @@
                 </div>
                 <div class="benefits__icon-text">
                     <div class="benefits__item-title">
-                        <h3 data-key="card3-title" class="title-4">Удаленное управление</h3>
+                        <h3 class="title-4">Удаленное управление</h3>
                     </div>
-                    <p data-key="card3-text" class="benefits__item-desc">Удобный контроль всех устройств</p>
+                    <p class="benefits__item-desc">Удобный контроль всех устройств</p>
                 </div>
             </li>
             <li class="benefits__item">
@@ -49,9 +49,9 @@
                 </div>
                 <div class="benefits__icon-text">
                     <div class="benefits__item-title">
-                        <h3 data-key="card4-title" class="title-4">Комплексная защита </h3>
+                        <h3 class="title-4">Комплексная защита </h3>
                     </div>
-                    <p data-key="card4-text" class="benefits__item-desc">Защита от вирусов, фишинга, хакерских атак, вредоносного ПО</p>
+                    <p class="benefits__item-desc">Защита от вирусов, фишинга, хакерских атак, вредоносного ПО</p>
                 </div>
             </li>
             <li class="benefits__item">
@@ -62,9 +62,9 @@
                 </div>
                 <div class="benefits__icon-text">
                     <div class="benefits__item-title">
-                        <h3 data-key="card5-title" class="title-4">Гибкие лицензии </h3>
+                        <h3 class="title-4">Гибкие лицензии </h3>
                     </div>
-                    <p data-key="card5-text" class="benefits__item-desc">Лицензионные пакеты от 1 до 100 конечных точек.</p>
+                    <p class="benefits__item-desc">Лицензионные пакеты от 1 до 100 конечных точек.</p>
                 </div>
             </li>            
         </ul>
