--- a/src/html/blocks/feedbacks.html
+++ b/src/html/blocks/feedbacks.html
@@ -1,4 +1,4 @@
-<section class="feedbacks">
+<section class="feedbacks" id="feedbacks">
     <div class="container">
         <h2 class="title-2">Отзывы</h2>
         <div class="feedbacks__swiper">
