--- a/src/html/blocks/why.html
+++ b/src/html/blocks/why.html
@@ -1,36 +1,58 @@
 <section class="why">
     <div class="container">
         <div class="why__header">
+            <img class="why__logo" src="./../../img/logo@2x.png" alt="logo">
             <h2 class="title-2">Почему N SERVICE?</h2>
-        </div>
+        </div>        
         <div class="why__wrapper">            
-            <p class="subtitle why__subtitle">N Service сотрудничает с Trend Micro миллион лет и предоставяет услуги этой компании в полном объеме, с гарантией персонального подхода к каждому клиенту </p>
-            <div class="why__list-wrapper">
-                <div class="why__list-title">
-                    <p class="subtitle">Наши особенности:</p>
-                </div>
-                    <ul class="why__list">
-                        <li class="list-item">Настройка антивируса под ваш бизнес, с учетом его специфики.</li>
-                        <li class="list-item">Комплексная защита "под ключ" - полный спектр безопасности ваших данных. </li>
-                        <li class="list-item">Аудит безопасности - выявляем "слабые места" вашей системы. </li>
-                        <li class="list-item">Постоянная техническая поддержка.</li>
-                    </ul>          
-                    <p>
-                        1. Дополнительные услуги:
-Мы предлагаем не просто продукт, а комплексное решение для защиты вашего бизнеса. Помимо самого антивируса, наши клиенты получают:
-•	Настройку антивирусного ПО под индивидуальные потребности, что позволяет максимально использовать возможности защиты;
-•	Постоянную техническую поддержку, которая оперативно решает любые вопросы и помогает в оптимизации безопасности;
-•	Аудит безопасности, позволяющий выявить и устранить потенциальные уязвимости в вашей IT-инфраструктуре.
-2. Опыт и экспертиза в IT и кибербезопасности:
-N SERVICE имеет многолетний опыт работы в сфере информационных технологий и кибербезопасности. Мы можем предоставить конкретные кейсы и отзывы от ведущих компаний, что подтверждает наш высокий уровень профессионализма и надежность.
-
-
-                    </p>
-                    <div class="logo">logo 1</div>
-                    <div class="logo">logo 2</div>
-                    <div class="logo">logo 3</div>
-                    <div class="logo">logo 4</div>
+            <div class="why__desc">
+                <p>
+                    Выбирая N SERVICE, вы приобретаете не только высококачественный антивирус, но и всестороннюю сервисную поддержку, основанную на богатом опыте и высоком профессионализме. Компания N Service работает на рынке IT-услуг с 2020 года. Наш "коэффициент удержания клиентов" составляет 85%, что превосходит средний показатель в отрасли почти на 5%.
+                </p>
+                </div>            
+        </div>
+        <div class="why__list">
+            <h3 class="title-3">Клиенты N SERVICE получают:</h3>
+            <div class="why__list-item">
+                <h4 class="item-title title-4">1.	Расширенное предложение</h4>
+                <p class="item-subtitle" >Помимо самого антивируса, в пакет услуг для клиентов N SERVICE входит:</p>
+                <ul>
+                    <li><p>Антивирусное ПО под индивидуальные потребности вашего бизнеса;</p></li>
+                    <li><p>Постоянная техническая поддержка;</p></li>
+                    <li><p>Аудит безопасности, с выявлением и устранением потенциальных уязвимостей в вашей IT-структуре.</p></li>
+                </ul>                
+             </div>
+            <div class="why__list-item">
+                <h4 class="item-title title-4"> 2. Опыт компании</h4>
+                <p class="item-subtitle">N SERVICE обладает многолетней практикой работы в сфере кибербезопасности. Мы можем предоставить конкретные кейсы и <a href="#partners">отзывы сотрудничающих с нами компаний.</a> 
+                </p>
             </div>
+            <div class="why__list-item">
+                <h4 class="item-title title-4">3. Бонусы N SERVICE</h4>
+                <div class="bonus__wrapper">
+                    <p class="item-subtitle">При покупке антивируса через N SERVICE, наши клиенты получают ряд привлекательных преимуществ:               
+                    </p>
+                    <ul class="bonus__list">
+                        <li class="bonus__list-item">
+                            <svg class="icon--gift1">
+                                <use href="./img/svgsprite/stack/svg/sprite.stack.svg#gift1"></use>
+                            </svg>
+                            Бесплатная установка антивируса
+                        </li>
+                        <li class="bonus__list-item">
+                            <svg class="icon--gift2">
+                                <use href="./img/svgsprite/stack/svg/sprite.stack.svg#gift2"></use>
+                            </svg>
+                            Скидки на обновления и услуги для постоянных клиентов
+                        </li>
+                        <li class="bonus__list-item">
+                            <svg class="icon--gift3">
+                                <use href="./img/svgsprite/stack/svg/sprite.stack.svg#gift3"></use>
+                            </svg>
+                            Бесплатные консультации экспертов по выбору оптимальных решений защиты
+                        </li>
+                    </ul>                    
+                </div>             </div>
         </div>
     </div>
 </section>
