--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,10 +11,12 @@
 		content="">
 	<title data-key="landing-title">NSERVICE</title>
 	<link rel="stylesheet" href="./css/main.css" />
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
+	<link rel="apple-touch-icon" sizes="180x180" href="./../img/favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./../img/favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./../img/favicons/favicon-16x16.png">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+
+	<link rel="manifest" href="./../img/favicons/site.webmanifest">
 	
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
@@ -28,8 +30,7 @@
 		@@include('blocks/about.html')
 		@@include('blocks/benefits.html')
 		@@include('blocks/video.html')
-		@@include('blocks/why.html')
-		@@include('blocks/bonus.html')
+		@@include('blocks/why.html')		
 		@@include('blocks/partners.html')
 		@@include('blocks/feedbacks.html')
 		@@include('blocks/howtobuy.html')
