--- a/src/html/blocks/partners.html
+++ b/src/html/blocks/partners.html
@@ -1,4 +1,4 @@
-<section class="partners">
+<section class="partners" id="partners">
     <div class="container">
         <h2 class="title-2">Наши партнеры</h2>
         <div class="gallery">
