--- a/src/html/blocks/benefits.html
+++ b/src/html/blocks/benefits.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="benefits__icon-text">
                     <div class="benefits__item-title">
-                        <h3 class="title-4">Облачное размещение</h3>
+                        <p>Облачное размещение</p>
                     </div>
                     <p class="benefits__item-desc">Зашита не нагружает систему и всегда соответствует актуальной версии</p>
                 </div>
@@ -23,7 +23,7 @@
                 </div>
                 <div class="benefits__icon-text">
                     <div class="benefits__item-title">
-                        <h3 class="title-4">Высокая степень выявления угроз </h3>
+                        <p>Высокая степень выявления угроз </p>
                     </div>
                     <p class="benefits__item-desc">Применяется искусственный интеллект и машинное обучение</p>
                 </div>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="benefits__icon-text">
                     <div class="benefits__item-title">
-                        <h3 class="title-4">Удаленное управление</h3>
+                        <p>Удаленное управление</p>
                     </div>
                     <p class="benefits__item-desc">Удобный контроль всех устройств</p>
                 </div>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="benefits__icon-text">
                     <div class="benefits__item-title">
-                        <h3 class="title-4">Комплексная защита </h3>
+                        <p>Комплексная защита </p>
                     </div>
                     <p class="benefits__item-desc">Защита от вирусов, фишинга, хакерских атак, вредоносного ПО</p>
                 </div>
@@ -62,9 +62,9 @@
                 </div>
                 <div class="benefits__icon-text">
                     <div class="benefits__item-title">
-                        <h3 class="title-4">Гибкие лицензии </h3>
+                        <p>Гибкие лицензии </p>
                     </div>
-                    <p class="benefits__item-desc">Лицензионные пакеты от 1 до 100 конечных точек.</p>
+                    <p class="benefits__item-desc">Лицензионные пакеты от 1 до 100 конечных точек</p>
                 </div>
             </li>            
         </ul>
