--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -2,9 +2,12 @@
     <div class="container">
         <div class="footer__row">
             <div class="footer__left-side">
-                <div class="footer__data">                    
-                    <p> "N SERVICE", SIA<br>
-                        Рег. номер: 40203287886 <br>
+                <div class="footer__data">
+            
+            <div class="h3 title-3">
+                "N SERVICE", SIA
+            </div>
+                    <p> Рег. номер: 40203287886 <br>
                         Рига, ул. Русес 26-135, LV-1029, Латвия <br>
                         <a href="mailTo:service@nservice.lv"> service@nservice.lv </a> 
                         <br>                                            
