--- a/src/html/blocks/howtobuy.html
+++ b/src/html/blocks/howtobuy.html
@@ -2,9 +2,9 @@
     <div class="container">
         <h2 class="title-2">Как купить?</h2>
         <ul class="howtobuy__list">
-            <li class="howtobuy__list-item">Шаг 1. Оставляете заявку: через форму или мессенджер.</li>
-            <li class="howtobuy__list-item">Шаг 2. N Service подбирает для вас оптимальный тариф.</li>
-            <li class="howtobuy__list-item">Шаг 3. N Service <span class="colored">бесплатно</span> устанавливает и настраивает выбранное вами ПО.</li>
+            <li class="howtobuy__list-item"><span class="colored2">Шаг 1.</span> Оставляете заявку: через форму или мессенджер.</li>
+            <li class="howtobuy__list-item"><span class="colored2">Шаг 2.</span> N Service подбирает для вас оптимальный тариф.</li>
+            <li class="howtobuy__list-item"><span class="colored2">Шаг 3.</span> N Service <span class="colored">бесплатно</span> устанавливает и настраивает выбранное вами ПО.</li>
         </ul>
 
         <div class="howtobuy__licenses">
