--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -25,10 +25,10 @@
                     </a>
                 </div>
             </div>                
-            <ul class="about__list">
-                    <li>✅ Полная защита корпоративных устройств </li>
-                    <li>✅ Централизованное управление и мониторинг</li>
-                    <li>✅ Высокая степень выявления угроз (AI и машинное обучение)</li>
-            </ul>                                          
+            <div class="about__list">
+                    <p>✅ Полная защита корпоративных устройств </p>
+                    <p>✅ Централизованное управление и мониторинг</p>
+                    <p>✅ Высокая степень выявления угроз (AI и машинное обучение)</p>
+            </div>                                          
         </div>
 </section>
