--- a/src/html/blocks/why.html
+++ b/src/html/blocks/why.html
@@ -1,7 +1,7 @@
 <section class="why">
     <div class="container">
         <div class="why__header">
-            <img class="why__logo" src="./../../img/logo@2x.png" alt="logo">
+            <img class="why__logo" src="./../../img/logo.png" alt="logo">
             <h2 class="title-2">Почему N SERVICE?</h2>
         </div>        
         <div class="why__wrapper">            
