--- a/src/html/blocks/benefits.html
+++ b/src/html/blocks/benefits.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="benefits__icon-text">
                     <div class="benefits__item-title">
-                        <p>Высокая степень выявления угроз </p>
+                        <p>Надежное выявление угроз </p>
                     </div>
                     <p class="benefits__item-desc">Применяется искусственный интеллект и машинное обучение</p>
                 </div>
