--- a/src/html/blocks/cta.html
+++ b/src/html/blocks/cta.html
@@ -4,12 +4,12 @@
         <div class="cta__wrapper">
             <div class="cta__left-side">
                 <div class="cta__socials">
-                    <a href="#" class="cta__socials-item">
+                    <a href="#!" class="cta__socials-item">
                         <svg class="icon icon--whatsapp">
                             <use href="./img/svgsprite/stack/svg/sprite.stack.svg#whatsapp"><span class="icon-text">Whatsapp</span></use>
                         </svg>
                     </a>
-                    <a href="#" class="cta__socials-item">
+                    <a href="#!" class="cta__socials-item">
                         <svg class="icon icon--telegram">
                             <use href="./img/svgsprite/stack/svg/sprite.stack.svg#telegram"><span class="icon-text">Telegram</span></use>
                         </svg>
