--- a/src/html/blocks/video.html
+++ b/src/html/blocks/video.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="video__wrapper">
             <div class="video__title">
-                <h2 class="title-2">trend micro: видео</h2>
+                <h2 class="title-2">trend micro: <small>видеописание</small></h2>
             </div>
             <iframe  height="600px" src="https://www.youtube.com/embed/Dh6K9DTlPvM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>VIDEO</iframe>
         </div>
