--- a/src/html/blocks/benefits.html
+++ b/src/html/blocks/benefits.html
@@ -12,7 +12,7 @@
                     <div class="benefits__item-title">
                         <p>Облачное размещение</p>
                     </div>
-                    <p class="benefits__item-desc">Зашита не нагружает систему и всегда соответствует актуальной версии</p>
+                    <p class="benefits__item-desc">Зашита не нагружает систему, всегда соответствует актуальной версии</p>
                 </div>
             </li>
             <li class="benefits__item">
@@ -25,7 +25,7 @@
                     <div class="benefits__item-title">
                         <p>Надежное выявление угроз </p>
                     </div>
-                    <p class="benefits__item-desc">Применяется искусственный интеллект и машинное обучение</p>
+                    <p class="benefits__item-desc">Применяются ИИ и машинное обучение</p>
                 </div>
             </li>
             <li class="benefits__item">
@@ -51,7 +51,7 @@
                     <div class="benefits__item-title">
                         <p>Комплексная защита </p>
                     </div>
-                    <p class="benefits__item-desc">Защита от вирусов, фишинга, хакерских атак, вредоносного ПО</p>
+                    <p class="benefits__item-desc"> От вирусов, фишинга, хакерских атак, вредоносного ПО</p>
                 </div>
             </li>
             <li class="benefits__item">
