--- a/src/html/blocks/howtobuy.html
+++ b/src/html/blocks/howtobuy.html
@@ -8,10 +8,13 @@
         </ul>
 
         <div class="howtobuy__licenses">
-            <p class="subtitle">Oзнакомьтесь с тарифами Trend Micro Worry-Free</p>
+            <p class="title-4">Oзнакомьтесь с тарифами Trend Micro Worry-Free</p>
             @@include('templates/table.html')           
         </div>
 
-        <div class="data_to_pay">💳 Оплата по счету (указать реквизиты для юр.лиц)</div>
+        <div class="data_to_pay">
+            <h4 class="title-4">Способ оплаты</h4>
+            <p>По выставленному для юридических лиц счету, после оформления заказа. Более подробная информация - при получении консультации.</p>
+        </div>
     </div>
 </section>
