--- a/src/html/blocks/mobile-nav.html
+++ b/src/html/blocks/mobile-nav.html
@@ -2,7 +2,7 @@
 	<ul class="mobile-nav__list">
 		<li><a href="#about" class="hover-underline-animation center">о нас</a></li>
 			<li><a href="#video" class="hover-underline-animation center">trendmicro</a></li>
-			<li><a href="#howtobuy" class="hover-underline-animation center">тарифы</a></li>
+			<li><a href="#howtobuy" class="hover-underline-animation center">купить</a></li>
 			<li><a href="#cta" class="hover-underline-animation center">Контакты</a></li>
 	</ul>
 </div>
