--- a/src/html/blocks/partners.html
+++ b/src/html/blocks/partners.html
@@ -24,7 +24,7 @@
             <div class="partners__partners-list">
                 <ul class="list-first-part">
                     <li><a href="https://www.via-una.lv" target="_blank">VIA UNA, SIA</a></li>
-                    <li>ES TE RĪGA, SIA</li>
+                    <li><a href="https://aktualaspreces.lv">ES TE RĪGA, SIA</a></li>
                     <li><a href="https://miksplus.eu" target="_blank">Miks Plus, SIA</a>
                         </li>
                     <li><a href="https://iluxsiir.ee" target="_blank">IluXsiir OÜ</a>
@@ -33,10 +33,9 @@
                        </li>
                 </ul>
                 <ul class="list-second-part">
-                    <li>LIVONIA SHIPPING COMPANY, SIA</li>
-                    <li>Marks Lapunovs</li>
                     <li>LOLITA VOVKA</li>
                     <li>Aleksandrs Vovks</li>                
+                    <li>LIVONIA SHIPPING COMPANY, SIA</li>
                 </ul>
             </div>
         </div>            
