--- a/src/html/blocks/why.html
+++ b/src/html/blocks/why.html
@@ -7,7 +7,7 @@
         <div class="why__wrapper">            
             <div class="why__desc">
                 <p>
-                    Выбирая N SERVICE, вы приобретаете не только высококачественный антивирус, но и всестороннюю сервисную поддержку, основанную на богатом опыте и высоком профессионализме. Компания N Service работает на рынке IT-услуг с 2020 года. Наш "коэффициент удержания клиентов" составляет 85%, что превосходит средний показатель в отрасли почти на 5%.
+                    Выбирая N SERVICE, вы приобретаете не только высококачественный антивирус, но и всестороннюю сервисную поддержку опытной команды профессионалов. Компания N Service работает на рынке IT-услуг с 2020 года. Её "коэффициент удержания клиентов" составляет 85%, что превосходит средний показатель в отрасли почти на 5%.
                 </p>
                 </div>            
         </div>
@@ -26,10 +26,10 @@
             
              <div class="why__list-item">
                 <h4 class="item-title title-4"> 2. Опыт компании</h4>
-                <p class="item-subtitle">N SERVICE обладает многолетней практикой работы в сфере кибербезопасности. 
+                <p class="item-subtitle">N SERVICE обладает многолетней практикой в сфере кибербезопасности.
                 </p>
                 <p class="Why__link">
-                    Мы можем предоставить конкретные кейсы и <a href="#partners">отзывы сотрудничающих с нами компаний.
+                    В подтверждение можем предоставить конкретные кейсы своего практического опыта, а также <a href="#partners">отзывы сотрудничающих с нами компаний.
                     </a> 
                 </p>                    
             </div>
@@ -37,7 +37,7 @@
             <div class="why__list-item">
                 <h4 class="item-title title-4">3. Бонусы N SERVICE</h4>
                 <div class="bonus__wrapper">
-                    <p class="item-subtitle">При покупке антивируса через N SERVICE, наши клиенты получают ряд привлекательных преимуществ:               
+                    <p class="item-subtitle">При покупке антивируса через N SERVICE, наши клиенты получают ряд дополнительных преимуществ:               
                     </p>
                     <ul class="bonus__list">
                         <li class="bonus__list-item">
