--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="header__row ">
             <a href="#about" class="logo">
-                <img src="./../../img/logo.png" srcset="./../../img/logo@2x.png" alt="logo">
+                <img src="./../../img/logo_horizontal.jpg" srcset="./../../img/logo_horizontal@2x.jpg" alt="logo">
             </a>
             <nav class="header__nav nav">
                 <ul class="nav__list">
