--- a/src/html/blocks/why.html
+++ b/src/html/blocks/why.html
@@ -1,13 +1,13 @@
 <section class="why">
     <div class="container">
         <div class="why__header">
-            <img class="why__logo" src="./../../img/logo.png" alt="logo">
+            <img class="logo-squere" src="./../../img/logo_squere.jpg" srcset="./../../img/logo_squere@2x.jpg" alt="logo">
             <h2 class="title-2">Почему N SERVICE?</h2>
         </div>        
         <div class="why__wrapper">            
             <div class="why__desc">
                 <p>
-                    Выбирая N SERVICE, вы приобретаете не только высококачественный антивирус, но и всестороннюю сервисную поддержку опытной команды профессионалов. Компания N Service работает на рынке IT-услуг с 2020 года. Её "коэффициент удержания клиентов" составляет 85%, что превосходит средний показатель в отрасли почти на 5%.
+                    Выбирая N SERVICE, вы приобретаете не только высококачественный антивирус, но и всестороннюю сервисную поддержку опытной команды профессионалов. Компания N Service работает на рынке IT-услуг с 2020 года. Её "коэффициент удержания клиентов" составляет 85%, что превосходит средний показатель почти на 5%.
                 </p>
                 </div>            
         </div>
