--- a/src/html/blocks/howtobuy.html
+++ b/src/html/blocks/howtobuy.html
@@ -2,9 +2,9 @@
     <div class="container">
         <h2 class="title-2">Как купить?</h2>
         <ul class="howtobuy__list">
-            <li class="howtobuy__list-item"><span class="colored2">Шаг 1.</span> Оставляете заявку: через форму или мессенджер.</li>
-            <li class="howtobuy__list-item"><span class="colored2">Шаг 2.</span> N Service подбирает для вас оптимальный тариф.</li>
-            <li class="howtobuy__list-item"><span class="colored2">Шаг 3.</span> N Service <span class="colored">бесплатно</span> устанавливает и настраивает выбранное вами ПО.</li>
+            <li class="howtobuy__list-item"><span class="colored2">Шаг 1:</span><p>Оставляете заявку: через форму или мессенджер;</p> </li>
+            <li class="howtobuy__list-item"><span class="colored2">Шаг 2:</span><p>N Service подбирает для вас оптимальный тариф;</p> </li>
+            <li class="howtobuy__list-item"><span class="colored2">Шаг 3:</span><p> N Service <span class="colored">бесплатно</span> устанавливает и настраивает выбранное вами ПО.</p></li>
         </ul>
 
         <div class="howtobuy__licenses">
@@ -12,9 +12,10 @@
             @@include('templates/table.html')           
         </div>
 
-        <div class="data_to_pay">
+        <div class="howtobuy__payment">
             <h4 class="title-4">Способ оплаты</h4>
-            <p>По выставленному для юридических лиц счету, после оформления заказа. Более подробная информация - при получении консультации.</p>
+            <p>По выставленному для юридических лиц счету, после оформления заказа. Более подробная информация - <a class="howtobuy__link" href="#cta">при получении консультации</a> .</p>
         </div>
+        <img src="./../../img/nservice-img/businessman.jpg" alt="finger" class="howtobuy__img">
     </div>
 </section>
