--- a/src/html/blocks/howtobuy.html
+++ b/src/html/blocks/howtobuy.html
@@ -13,9 +13,10 @@
         </div>
 
         <div class="howtobuy__payment">
-            <h4 class="title-4">Способ оплаты</h4>
-            <p>По выставленному для юридических лиц счету, после оформления заказа. Более подробная информация - <a class="howtobuy__link" href="#cta">при получении консультации</a> .</p>
+            <div class="howtobuy__payment-desc">
+                <h4 class="title-4"></h4>
+                <p>Оплата по выставленному для юридических лиц счету - после оформления заказа. <br> Более подробная информация - <a class="howtobuy__link" href="#cta">при получении консультации</a>
+            .</p></div>
         </div>
-        <img src="./../../img/nservice-img/businessman.jpg" alt="finger" class="howtobuy__img">
-    </div>
+        </div>
 </section>
