--- a/src/html/blocks/why.html
+++ b/src/html/blocks/why.html
@@ -1,8 +1,8 @@
 <section class="why">
     <div class="container">
         <div class="why__header">
-            <img class="logo-squere" src="./../../img/logo_squere.jpg" srcset="./../../img/logo_squere@2x.jpg" alt="logo">
-            <h2 class="title-2">Почему N SERVICE?</h2>
+            <img class="logo-square" src="./../../img/logo_square.jpg" srcset="./../../img/logo_square@2x.jpg" alt="logo">
+            <h2 class="title-2 why__title">Почему N SERVICE?</h2>
         </div>        
         <div class="why__wrapper">            
             <div class="why__desc">
