--- a/src/html/blocks/cta.html
+++ b/src/html/blocks/cta.html
@@ -27,7 +27,7 @@
                         </svg>                        
                     </a>
                 </div>
-                <img src="./../../img/nservice-img/business2.png" alt="">                
+                <img class="cta__img" src="./../../img/nservice-img/business2.png" alt="">                
             </div>
                             
             <form action="/send.php" method="post" id="form" class="form" name="form"
