--- a/src/html/blocks/howtobuy.html
+++ b/src/html/blocks/howtobuy.html
@@ -4,7 +4,7 @@
         <ul class="howtobuy__list">
             <li class="howtobuy__list-item"><span class="colored2">Шаг 1:</span><p>Оставляете заявку: через форму или мессенджер;</p> </li>
             <li class="howtobuy__list-item"><span class="colored2">Шаг 2:</span><p>N Service подбирает для вас оптимальный тариф;</p> </li>
-            <li class="howtobuy__list-item"><span class="colored2">Шаг 3:</span><p> N Service <span class="colored">бесплатно</span> устанавливает и настраивает выбранное вами ПО.</p></li>
+            <li class="howtobuy__list-item"><span class="colored2">Шаг 3:</span><p> N Service <span class="colored">бесплатно</span> устанавливает и настраивает <br> выбранное вами ПО.</p></li>
         </ul>
 
         <div class="howtobuy__licenses">
@@ -14,7 +14,6 @@
 
         <div class="howtobuy__payment">
             <div class="howtobuy__payment-desc">
-                <h4 class="title-4"></h4>
                 <p>Оплата по выставленному для юридических лиц счету - после оформления заказа. <br> Более подробная информация - <a class="howtobuy__link" href="#cta">при получении консультации</a>
             .</p></div>
         </div>
