--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="about__flex">
             <div class="about__title-wrapper">
-                <h1 class="about__title">Надежная антивирусная защита <small class="about__title-small">для вашего бизнеса</small></h1>
+                <h1 class="about__title">Надежная антивирусная защита <br> <small class="about__title-small">для вашего бизнеса</small></h1>
             </div>
             <div class="about__desc">
                 <h2 class="about__product-title">"Trend Micro Worry-Free"</h2 >
