--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,8 +28,8 @@
 
 	<main class="main">
 		@@include('blocks/about.html')
-		@@include('blocks/benefits.html')
-		@@include('blocks/video.html')
+		<!-- @@include('blocks/benefits.html') -->
+		<!-- @@include('blocks/video.html') -->
 		@@include('blocks/why.html')		
 		@@include('blocks/partners.html')
 		@@include('blocks/feedbacks.html')
@@ -37,7 +37,7 @@
 		@@include('blocks/cta.html')
 		
 	</main>
-	@@include('blocks/footer.html')
+	<!-- @@include('blocks/footer.html') -->
 	
 	<script src="./js/index.bundle.js"></script>
 </body>
