--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -8,7 +8,7 @@
                 "N SERVICE", SIA
             </div>
                     <p> Рег. номер: 40203287886 <br>
-                        Рига, ул. Русес 26-135, LV-1029, Латвия <br>
+                        Рига, ул. Русес 26-135, LV-1029, Латвия <br><br>                        
                         <a href="mailTo:service@nservice.lv"> service@nservice.lv </a> 
                         <br>                                            
                         <a href="https://nservice.lv/" target="_blank" > www.nservice.lv</a>
