--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -6,19 +6,18 @@
             
             <div class="h3 title-3">
                 "N SERVICE", SIA
-            </div>
-                    <p> Рег. номер: 40203287886 <br>
-                        Рига, ул. Русес 26-135, LV-1029, Латвия <br><br>                        
-                        <a href="mailTo:service@nservice.lv"> service@nservice.lv </a> 
+            </div><br>
+                    <p> Рег. номер: 40203287886<br><br>
+                        Адрес: Рига, ул. Русес 26-135, LV-1029, Латвия<br><br>                    
+                        <a href="mailTo:service@nservice.lv">service@nservice.lv</a> 
                         <br>                                            
-                        <a href="https://nservice.lv/" target="_blank" > www.nservice.lv</a>
+                        <a href="https://nservice.lv/" target="_blank">www.nservice.lv</a>
                     </p>
                 </div>
             </div>
             <div class="footer__right-side">
-                <div class="footer__copyright">
-                    Copyright © 2025. <span data-key="all-rights">Все права защищены</span> 
-                </div>
+                <p class="footer__copyright">Copyright © 2025. <span>Все права защищены</span> 
+                </p>
             </div>
         </div>
     </div>
