--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,7 +24,7 @@
 <body>
 	<!-- @@include('blocks/templates/scroll-up.html') -->
 	@@include('blocks/header.html')
-	<!-- @@include('blocks/agreement-bar.html') -->
+	@@include('blocks/agreement-bar.html')
 
 	<main class="main">
 		@@include('blocks/about.html')
