--- a/src/html/blocks/cta.html
+++ b/src/html/blocks/cta.html
@@ -4,27 +4,31 @@
         <div class="cta__wrapper">
             <div class="cta__left-side">
                 <div class="cta__socials">
-                    <a href="#!" class="cta__socials-item">
+                    <a href="https://wa.me/37129503980" target="_blank" class="cta__socials-item">
                         <svg class="icon icon--whatsapp">
-                            <use href="./img/svgsprite/stack/svg/sprite.stack.svg#whatsapp"><span class="icon-text">Whatsapp</span></use>
+                            <use href="./img/svgsprite/stack/svg/sprite.stack.svg#whatsapp"></use>                            
                         </svg>
+                        <span class="icon-text">Whatsapp</span>
                     </a>
-                    <a href="#!" class="cta__socials-item">
+                    <a href="https://t.me/username" target="_blank" class="cta__socials-item">
                         <svg class="icon icon--telegram">
-                            <use href="./img/svgsprite/stack/svg/sprite.stack.svg#telegram"><span class="icon-text">Telegram</span></use>
+                            <use href="./img/svgsprite/stack/svg/sprite.stack.svg#telegram"></use>
                         </svg>
+                        <span class="icon-text">Telegram</span>
                     </a>
                 </div>
                 <div class="cta__contacts">
                     <a href="mailTo:service@nservice.lv">
                         <svg class="icon icon--email">
-                            <use href="./img/svgsprite/sprite.symbol.svg#email"><span class="cta__email">service@nservice.lv</span></use>
-                        </svg>                        
+                            <use href="./img/svgsprite/sprite.symbol.svg#email"></use>
+                        </svg>
+                        <span class="cta__email">service@nservice.lv</span>                        
                     </a>
                     <a href="tel:+37129503980">
                         <svg class="icon icon--phone">
-                            <use href="./img/svgsprite/sprite.symbol.svg#phone"><span class="cta__phone">+371 29 503 980</span></use>
-                        </svg>                        
+                            <use href="./img/svgsprite/sprite.symbol.svg#phone"></use>
+                        </svg>
+                        <span class="cta__phone">+371 29 503 980</span>                        
                     </a>
                 </div>
                 <img class="cta__img" src="./../../img/nservice-img/business2.png" alt="">                
