--- a/src/html/blocks/video.html
+++ b/src/html/blocks/video.html
@@ -5,7 +5,7 @@
             <div class="video__title">
                 <h2 class="title-2">trend micro: <small>видеописание</small></h2>
             </div>
-            <iframe class="video__frame"  height="600px" src="https://www.youtube.com/embed/Dh6K9DTlPvM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>VIDEO</iframe>
+            <iframe class="video__frame"  height="600" src="https://www.youtube.com/embed/Dh6K9DTlPvM" title="YouTube video player" style="border: none;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 </section>
